cloudformation/template.yaml
---
AWSTemplateFormatVersion: '2010-09-09'

Parameters:

  InstanceType:
    Description: WebServer EC2 instance type
    Type: String
    Default: t2.small
    AllowedValues:
    - t1.micro
    - t2.nano
    - t2.micro
    - t2.small
    - t2.medium
    ConstraintDescription: must be a valid EC2 instance type.
  SSHLocation:
    Description: The IP address range that can be used to SSH to the EC2 instances
    Type: String
    MinLength: '9'
    MaxLength: '18'
    Default: 0.0.0.0/0
    AllowedPattern: "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})"
    ConstraintDescription: must be a valid IP CIDR range of the form x.x.x.x/x.
  AmiId:
    Type: String 
    Default: "ami-006359e1ac69e19a4" # Provided by Packer manually  
  VPC: 
    Type: String 
    Default: "vpc-5e1c5626"
  KeyName:
    Description: Name of an existing EC2 KeyPair to enable SSH access to the instance
    Type: AWS::EC2::KeyPair::KeyName
    ConstraintDescription: must be the name of an existing EC2 KeyPair.
    Default: "joel-test"
  BucketName:
    Type: String 
    Default: "ami-test-bucket-hz"

Resources:

  EC2IAMRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
        - Effect: Allow
          Principal:
            Service:
            - ec2.amazonaws.com
          Action:
          - sts:AssumeRole
      Path: "/"
      
  EC2InstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Path: "/"
      Roles:
      - Ref: EC2IAMRole

  EC2IAMRolePolicies:
    Type: AWS::IAM::Policy
    Properties:
      PolicyName: EC2IAMRolePolicy
      PolicyDocument:
        Statement:
        - Effect: Allow
          Action: "*"
          Resource: "*"
      Roles:
      - Ref: EC2IAMRole

  EC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType:
        Ref: InstanceType
      SecurityGroupIds:
      - !Ref SSHSecurityGroup
      - !Ref HTTPSecurityGroup
      - !Ref HTTPSSecurityGroup
      KeyName:
        Ref: KeyName
      ImageId: !Ref AmiId
      UserData:
        Fn::Base64: |
          #!/bin/bash
          sudo apt update -y
          sudo apt upgrade -y
          ansible-playbook ../ansible/on-ec2-start.yml
      IamInstanceProfile:
        Ref: EC2InstanceProfile
      Tags: 
        - 
          Key: "Name"
          Value: "ami-test-instance"
        - 
          Key: "CreatedBy"
          Value: "Joel Fogue"
        - 
          Key: "Environment"
          Value: "Devops"


  SSHSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable SSH access via port 22
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: '22'
        ToPort: '22'
        CidrIp:
          Ref: SSHLocation
      VpcId: !Ref VPC    

  HTTPSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable HTTP access via port 80
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: '80'
        ToPort: '80'
        CidrIp:
          Ref: SSHLocation
      VpcId: !Ref VPC    

  HTTPSSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable HTTPS access via port 443
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: '443'
        ToPort: '443'
        CidrIp:
          Ref: SSHLocation
      VpcId: !Ref VPC

  S3Bucket:
    Type: AWS::S3::Bucket
    Properties:
      BucketName: !Ref BucketName

  DNS: 
    Type: "AWS::Route53::HostedZone"
    Properties: 
      HostedZoneConfig: 
        Comment: 'Hosted zone for k8sapp.com'
      Name: 'k8sapp.com'
      VPCs: 
        - 
          VPCId: !Ref VPC
          VPCRegion: 'us-east-1'

      HostedZoneTags: 
        - 
          Key: 'CreatedBy'
          Value: 'Joel Fogue'
        - 
          Key: 'Platform'
          Value: 'DevOps'

Outputs:
  InstanceId:
    Description: InstanceId of the newly created EC2 instance
    Value:
      Ref: EC2Instance
  AZ:
    Description: Availability Zone of the newly created EC2 instance
    Value:
      Fn::GetAtt:
      - EC2Instance
      - AvailabilityZone
  PublicDNS:
    Description: Public DNSName of the newly created EC2 instance
    Value:
      Fn::GetAtt:
      - EC2Instance
      - PublicDnsName
  PublicIP:
    Description: Public IP address of the newly created EC2 instance
    Value:
      Fn::GetAtt:
      - EC2Instance
      - PublicIp
